--- a/templates/item/prerequisites.hbs
+++ b/templates/item/prerequisites.hbs
@@ -4,5 +4,11 @@
   data-group='primary'
   data-tab='prerequisites'
 >
-  <textarea name="system.prerequisites" rows="5">{{system.prerequisites}}</textarea>
+  <textarea 
+    name="system.prerequisites" 
+    rows="5"
+    class="base-form__textarea"
+  >
+    {{system.prerequisites}}
+  </textarea>
 </section>
