--- a/templates/item/effects.hbs
+++ b/templates/item/effects.hbs
@@ -1,4 +1,4 @@
-{{! Effects Tab }}
+{{! Effects Tab -- Depreciated! }}
 <section class='tab effects {{tab.cssClass}}' data-group='primary' data-tab='effects'>
   <ol class='items-panel__list'>
   {{#each effects as |section sid|}}
