--- a/templates/item/header.hbs
+++ b/templates/item/header.hbs
@@ -1,60 +1,64 @@
-<header class='sheet-header'>
+<header class='base-form__sheet-header'>
   <img
-    class='profile-img'
+    class='base-form__sheet-profile-img'
     src='{{item.img}}'
     data-edit='img'
     data-action='onEditImage'
     title='{{item.name}}'
   />
-  <div class='header-fields'>
+  <div class='base-form__sheet-header-fields'>
     <div class='document-name'>
       <input 
         name='name' 
         type='text' 
+        class="base-form__text-input"
         value='{{item.name}}' 
         placeholder='{{localize "EVENTIDE_RP_SYSTEM.Forms.Placeholders.Name"}}' 
       />
     </div>
     {{#if (eq item.type 'gear')}}
       <div class='grid grid-4col'>
-        <div class='resource'>
-          <label class='resource-label'>
+        <div>
+          <label class='base-form__label--small'>
             {{localize 'EVENTIDE_RP_SYSTEM.Item.Inventory.Quantity.label'}}
           </label>
           <input
-            type='text'
-            name='system.quantity'
-            value='{{system.quantity}}'
-            data-dtype='Number'
+            type="number"
+            class="base-form__number-input"
+            name="system.quantity"
+            value="{{system.quantity}}"
+            data-dtype="Number"
           />
         </div>
-        <div class='resource'>
-          <label class='resource-label'>
+        <div>
+          <label class='base-form__label--small'>
             {{localize 'EVENTIDE_RP_SYSTEM.Item.Inventory.Weight.label'}}
           </label>
           <input
-            type='text'
-            name='system.weight'
-            value='{{system.weight}}'
-            data-dtype='Number'
+            type="number"
+            class="base-form__number-input"
+            name="system.weight"
+            value="{{system.weight}}"
+            data-dtype="Number"
           />
         </div>
-        <div class='resource'>
-          <label class='resource-label'>
+        <div>
+          <label class='base-form__label--small'>
             {{localize 'EVENTIDE_RP_SYSTEM.Item.Inventory.Cost.label'}}
           </label>
           <input 
-            type="text" 
+            type="number" 
+            class="base-form__number-input"
             name="system.cost" 
             value="{{system.cost}}" 
             data-dtype="Number" 
           />
         </div>
-        <div class='resource'>
-          <label class="resource-label">
+        <div>
+          <label class="base-form__label--small">
             {{localize 'EVENTIDE_RP_SYSTEM.Forms.Sections.ClassName'}}
           </label>
-          <select name="system.className">
+          <select name="system.className" class="base-form__select">
             {{#each @root.config.classNames as |name key|}}
               <option 
                 value="{{key}}" 
@@ -67,55 +71,48 @@
         </div>
       </div>
     {{/if}}
-    <div class="grid grid-2col">
-    {{#if (eq item.type 'combatPower')}}
-        <div class='resource grid-span-2'>
-          <label class='resource-label'>
+    <div class="grid grid-2-col">
+      {{#if (eq item.type 'combatPower')}}
+        <div class="grid-span-2">
+          <label class='base-form__label--small'>
             {{localize 'EVENTIDE_RP_SYSTEM.Item.Inventory.Cost.label'}}
           </label>
           <input 
-            type="text" 
+            type="number" 
+            class="base-form__number-input"
             name="system.cost" 
             value="{{system.cost}}" 
             data-dtype="Number" 
           />
         </div>
       {{/if}}
-        <div class='resource'>
-          <label class='resource-label'>
+        <div>
+          <label class="base-form__label--small" for="color-textColor">
             {{localize 'EVENTIDE_RP_SYSTEM.Item.Colors.TextColor.label'}}
           </label>
-          <color-picker 
-            name="system.textColor" 
-            value="{{system.textColor}}" 
-            placeholder="{{localize 'EVENTIDE_RP_SYSTEM.Item.Colors.TextColor.placeholder'}}">
-            <input 
-              type="text" 
-              placeholder="{{localize 'EVENTIDE_RP_SYSTEM.Item.Colors.TextColor.placeholder'}}" 
-              name="system.textColor" 
-              data-edit="system.textColor"/>
-            <input type="color">
-          </color-picker>
+          <div class="base-form__color-picker-with-hex color-picker-with-hex">
+            <div class="color-picker-container">
+              <div class="color-preview" id="preview-textColor" style="background-color: {{system.textColor}}"></div>
+              <input type="color" class="color-picker" id="color-textColor" value="{{system.textColor}}" data-edit="system.textColor">
+              <input type="text" class="hex-input" id="hex-textColor" placeholder="{{localize 'EVENTIDE_RP_SYSTEM.Item.Colors.TextColor.placeholder'}}" value="{{system.textColor}}" name="system.textColor" data-edit="system.textColor">
+            </div>
+          </div>
         </div>
-        <div class='resource'>
-          <label class='resource-label'>
+        <div>
+          <label class="base-form__label--small" for="color-bgColor">
             {{localize 'EVENTIDE_RP_SYSTEM.Item.Colors.BgColor.label'}}
           </label>
-          <color-picker 
-            name="system.bgColor" 
-            value="{{system.bgColor}}" 
-            placeholder="{{localize 'EVENTIDE_RP_SYSTEM.Item.Colors.BgColor.placeholder'}}">
-            <input 
-              type="text" 
-              placeholder="{{localize 'EVENTIDE_RP_SYSTEM.Item.Colors.BgColor.placeholder'}}" 
-              name="system.bgColor" 
-              data-edit="system.bgColor"/>
-            <input type="color">
-          </color-picker>
+          <div class="base-form__color-picker-with-hex color-picker-with-hex">
+            <div class="color-picker-container">
+              <div class="color-preview" id="preview-bgColor" style="background-color: {{system.bgColor}}"></div>
+              <input type="color" class="color-picker" id="color-bgColor" value="{{system.bgColor}}" data-edit="system.bgColor">
+              <input type="text" class="hex-input" id="hex-bgColor" placeholder="{{localize 'EVENTIDE_RP_SYSTEM.Item.Colors.BgColor.placeholder'}}" value="{{system.bgColor}}" name="system.bgColor" data-edit="system.bgColor">
+            </div>
+          </div>
         </div>
     </div>
     <div class="grid grid-3col">
-      <div class="resource checkbox-resource">
+      <div class="checkbox-resource">
         <div class="checkbox-container">
           <label 
             class="resource-label checkbox-label"
@@ -136,46 +133,48 @@
         </div>
       </div>
       {{#if (eq item.type 'gear')}}
-      <div class="resource checkbox-resource">
-        <div class="checkbox-container">
-          <label 
-            class="resource-label checkbox-label">
-            {{localize "EVENTIDE_RP_SYSTEM.Item.Inventory.Equipped.label"}}
-          </label>
-          <div class="toggle-switch-wrapper">
-            <input 
-              type="checkbox" 
-              class="base-form__toggle-switch" 
-              name="system.equipped" 
-              id="system.equipped"
-              {{checked system.equipped}}
-              {{#ifCond system.quantity "<=" 0}}disabled{{/ifCond}}
-            />
-            <label class="toggle-switch-display" for="system.equipped"></label>
-          </div>
-        </div>
-      </div>
-        {{#if isGM}}
         <div class="resource checkbox-resource">
           <div class="checkbox-container">
             <label 
               class="resource-label checkbox-label"
-              title='{{localize "EVENTIDE_RP_SYSTEM.Item.Inventory.Cursed.label"}}'
+              title='{{localize "EVENTIDE_RP_SYSTEM.Item.Inventory.Equipped.label"}}'
             >
-              {{localize "EVENTIDE_RP_SYSTEM.Item.Inventory.Cursed.label"}}
+              {{localize "EVENTIDE_RP_SYSTEM.Item.Inventory.Equipped.label"}}
             </label>
             <div class="toggle-switch-wrapper">
               <input 
                 type="checkbox" 
                 class="base-form__toggle-switch" 
-                name="system.cursed" 
-                id="system.cursed"
-                {{checked system.cursed}}
+                name="system.equipped" 
+                id="system.equipped"
+                {{checked system.equipped}}
+                {{#ifCond system.quantity "<=" 0}}disabled{{/ifCond}}
               />
-              <label class="toggle-switch-display" for="system.cursed"></label>
+              <label class="toggle-switch-display" for="system.equipped"></label>
             </div>
           </div>
         </div>
+        {{#if isGM}}
+          <div class="resource checkbox-resource">
+            <div class="checkbox-container">
+              <label 
+                class="resource-label checkbox-label"
+                title='{{localize "EVENTIDE_RP_SYSTEM.Item.Inventory.Cursed.label"}}'
+              >
+                {{localize "EVENTIDE_RP_SYSTEM.Item.Inventory.Cursed.label"}}
+              </label>
+              <div class="toggle-switch-wrapper">
+                <input 
+                  type="checkbox" 
+                  class="base-form__toggle-switch" 
+                  name="system.cursed" 
+                  id="system.cursed"
+                  {{checked system.cursed}}
+                />
+                <label class="toggle-switch-display" for="system.cursed"></label>
+              </div>
+            </div>
+          </div>
         {{/if}}
       {{/if}}
     </div>
