--- a/templates/macros/effect-creator.hbs
+++ b/templates/macros/effect-creator.hbs
@@ -119,58 +119,7 @@
         </div>
       </div>
     </div>
-    {{#each abilities}}
-      <div class="base-form__group">
-        <label class="base-form__label" for="{{lowercase this}}">
-          {{{capitalize (localize (lookup @root.config.abilityAbbreviations this))}}}:
-        </label>
-        <div class="base-form__number-input-wrapper">
-          <button type="button" class="decrement" data-action="decrement">−</button>
-          <input 
-            class="base-form__number-input" 
-            type="number" 
-            id="{{lowercase this}}" 
-            name="{{lowercase this}}" 
-            value="0">
-          <button type="button" class="increment" data-action="increment">+</button>
-        </div>
-        <select 
-          class="base-form__select" 
-          id="{{lowercase this}}-mode" 
-          name="{{lowercase this}}-mode">
-          <option value="add">{{{localize "EVENTIDE_RP_SYSTEM.Forms.Modifications.Add"}}}</option>
-          <option value="override">{{{localize "EVENTIDE_RP_SYSTEM.Forms.Modifications.Override"}}}</option>
-          <option value="advantage">{{{localize "EVENTIDE_RP_SYSTEM.Forms.Modifications.Advantage"}}}</option>
-          <option value="disadvantage">{{{localize "EVENTIDE_RP_SYSTEM.Forms.Modifications.Disadvantage"}}}</option>
-        </select>
-      </div>
-    {{/each}}
-    {{#each hiddenAbilities}}
-      <div class="base-form__group">
-        <label 
-          class="base-form__label" 
-          for="{{lowercase this}}">
-          {{capitalize (localize (lookup @root.config.hiddenAbilityAbbreviations this))}}:
-        </label>
-        <div class="base-form__number-input-wrapper">
-          <button type="button" class="decrement" data-action="decrement">−</button>
-          <input 
-            class="base-form__number-input" 
-            type="number" 
-            id="{{lowercase this}}" 
-            name="{{lowercase this}}" 
-            value="0">
-          <button type="button" class="increment" data-action="increment">+</button>
-        </div>
-        <select 
-          class="base-form__select" 
-          id="{{lowercase this}}-mode" 
-          name="{{lowercase this}}-mode">
-          <option value="add">{{{localize "EVENTIDE_RP_SYSTEM.Forms.Modifications.Add"}}}</option>
-          <option value="override">{{{localize "EVENTIDE_RP_SYSTEM.Forms.Modifications.Override"}}}</option>
-        </select>
-      </div>
-    {{/each}}
+    {{> character-effects}}
   </div>
   
   <footer class="base-form__footer">
