--- a/templates/macros/gear-creator.hbs
+++ b/templates/macros/gear-creator.hbs
@@ -293,36 +293,7 @@
 
       <div class="gear-creator__column">
         <div class="base-form__header">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.Effects"}}</div>
-        {{#each abilities}}
-          <div class="base-form__group gear-creator__effect-group">
-            <label class="base-form__label" for="{{lowercase this}}">{{capitalize (localize (lookup @root.config.abilityAbbreviations this))}}</label>
-            <div class="base-form__number-input-wrapper">
-              <button type="button" class="decrement" data-action="decrement">−</button>
-              <input class="base-form__number-input gear-creator__effect-input" type="number" id="{{lowercase this}}" name="{{lowercase this}}" value="0">
-              <button type="button" class="increment" data-action="increment">+</button>
-            </div>
-            <select class="base-form__select gear-creator__effect-select" id="{{lowercase this}}-mode" name="{{lowercase this}}-mode">
-              <option value="add">{{localize "EVENTIDE_RP_SYSTEM.Forms.Modifications.Add"}}</option>
-              <option value="override">{{localize "EVENTIDE_RP_SYSTEM.Forms.Modifications.Override"}}</option>
-              <option value="advantage">{{localize "EVENTIDE_RP_SYSTEM.Forms.Modifications.Advantage"}}</option>
-              <option value="disadvantage">{{localize "EVENTIDE_RP_SYSTEM.Forms.Modifications.Disadvantage"}}</option>
-            </select>
-          </div>
-        {{/each}}
-        {{#each hiddenAbilities}}
-          <div class="base-form__group gear-creator__effect-group">
-            <label class="base-form__label" for="{{lowercase this}}">{{capitalize (localize (lookup @root.config.hiddenAbilityAbbreviations this))}}</label>
-            <div class="base-form__number-input-wrapper">
-              <button type="button" class="decrement" data-action="decrement">−</button>
-              <input class="base-form__number-input gear-creator__effect-input" type="number" id="{{lowercase this}}" name="{{lowercase this}}" value="0">
-              <button type="button" class="increment" data-action="increment">+</button>
-            </div>
-            <select class="base-form__select gear-creator__effect-select" id="{{lowercase this}}-mode" name="{{lowercase this}}-mode">
-              <option value="add">{{localize "EVENTIDE_RP_SYSTEM.Forms.Modifications.Add"}}</option>
-              <option value="override">{{localize "EVENTIDE_RP_SYSTEM.Forms.Modifications.Override"}}</option>
-            </select>
-          </div>
-        {{/each}}
+        {{> character-effects}}
       </div>
     </div>
   </div>
