--- a/templates/macros/effect-creator.hbs
+++ b/templates/macros/effect-creator.hbs
@@ -122,7 +122,5 @@
     {{> character-effects}}
   </div>
   
-  <footer class="base-form__footer">
-    <button type="submit" class="base-form__button base-form__button--primary">{{{ifThen targetArray.length (localize "EVENTIDE_RP_SYSTEM.Forms.Buttons.CreateAndApply") (localize "EVENTIDE_RP_SYSTEM.Forms.Buttons.Create")}}}</button>
-  </footer>
+  {{> macro-footer}}
 </div>
