--- a/templates/macros/parts/macro-footer.hbs
+++ b/templates/macros/parts/macro-footer.hbs
@@ -1,5 +1,5 @@
 <footer class="base-form__footer">
-  {{#each buttons as |current|}}
+  {{#each footerButtons as |current|}}
     <button
       type="{{current.type}}"
       class="{{current.cssClass}}"
