Implemented footer partial for macros.

--- a/templates/macros/gear-transfer.hbs
+++ b/templates/macros/gear-transfer.hbs
@@ -32,9 +32,5 @@
     </div>
   </div>
 
-  <footer class="base-form__footer">
-    <button type="submit" class="base-form__button base-form__button--primary">
-      <i class="fa fa-check"></i> {{localize "EVENTIDE_RP_SYSTEM.Forms.Buttons.Transfer"}}
-    </button>
-  </footer>
+  {{> macro-footer}}
 </div>
