--- a/templates/macros/select-ability-roll.hbs
+++ b/templates/macros/select-ability-roll.hbs
@@ -10,8 +10,5 @@
     </div>
   </div>
   
-  <footer class="base-form__footer">
-    <button type="submit" class="base-form__button base-form__button--primary">{{localize "EVENTIDE_RP_SYSTEM.Forms.Buttons.Roll"}}</button>
-    <button type="button" class="base-form__button" data-action="close">{{localize "EVENTIDE_RP_SYSTEM.Forms.Buttons.Close"}}</button>
-  </footer>
+  {{> macro-footer}}
 </div>
