--- a/templates/macros/damage-targets.hbs
+++ b/templates/macros/damage-targets.hbs
@@ -36,9 +36,5 @@
     </div>
   </div>
   
-  <footer class="base-form__footer">
-    <button type="submit" class="base-form__button base-form__button--primary">{{localize "EVENTIDE_RP_SYSTEM.Forms.Buttons.Damage"}}</button>
-    <button type="button" class="base-form__button" data-action="store">{{localize "EVENTIDE_RP_SYSTEM.Forms.Buttons.Store"}}</button>
-    <button type="button" class="base-form__button" data-action="close">{{localize "EVENTIDE_RP_SYSTEM.Forms.Buttons.Close"}}</button>
-  </footer>
+  {{> macro-footer}}
 </div>
