--- a/templates/macros/gear-creator.hbs
+++ b/templates/macros/gear-creator.hbs
@@ -299,7 +299,5 @@
     </div>
   </div>
 
-  <footer class="base-form__footer">
-    <button type="submit" class="base-form__button base-form__button--primary">{{ifThen targetArray.length (localize "EVENTIDE_RP_SYSTEM.Forms.Buttons.CreateAndApply") (localize "EVENTIDE_RP_SYSTEM.Forms.Buttons.Create")}}</button>
-  </footer>
+  {{> macro-footer}}
 </div>
