--- a/templates/macros/popups/gear-popup.hbs
+++ b/templates/macros/popups/gear-popup.hbs
@@ -107,10 +107,5 @@
     </div>
         
 
-    <footer class="base-form__footer">
-        {{#unless (or problems.targeting problems.quantity problems.equipped)}}
-            <button type="submit" class="popup-form__button popup-form__button--primary">{{localize "EVENTIDE_RP_SYSTEM.Forms.Buttons.UseItem"}}</button>
-        {{/unless}}
-        <button type="button" class="popup-form__button" data-action="close">{{localize "EVENTIDE_RP_SYSTEM.Forms.Buttons.Close"}}</button>
-    </footer>
+    {{> macro-footer}}
 </div>
