--- a/templates/macros/restore-target.hbs
+++ b/templates/macros/restore-target.hbs
@@ -42,8 +42,5 @@
     {{/each}}
   </div>
   
-  <footer class="base-form__footer">
-    <button type="submit" class="base-form__button base-form__button--primary">{{localize "EVENTIDE_RP_SYSTEM.Forms.Buttons.Restore"}}</button>
-    <button type="button" class="base-form__button" data-action="close">{{localize "EVENTIDE_RP_SYSTEM.Forms.Buttons.Close"}}</button>
-  </footer>
+  {{> macro-footer}}
 </div>
