--- a/templates/macros/restore-target.hbs
+++ b/templates/macros/restore-target.hbs
@@ -22,7 +22,7 @@
     </div>
     <hr />
     <div class="base-form__group base-form__group--checkbox base-form__group--header">
-      <label class="base-form__label">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.RemoveStatuses"}}</label>
+      <label class="base-form__header">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.RemoveStatuses"}}</label>
     </div>
     <div class="base-form__group base-form__group--checkbox">
       <label class="base-form__label" for="all">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.All"}}</label>
