--- a/templates/macros/change-target-status.hbs
+++ b/templates/macros/change-target-status.hbs
@@ -1,10 +1,5 @@
 <div class="{{cssClass}} base-form" autocomplete="off">
-  <header class="base-form__callout-box">
-    <div class="base-form__callout base-form__callout--information">
-      <i class="fas fa-info-circle"></i>
-      {{localize "EVENTIDE_RP_SYSTEM.Forms.ScriptExplanations.ChangeTargetStatus"}}
-    </div>
-  </header>
+  {{> callout-box}}
 
   <div class="base-form__content">
     <div class="base-form__group">
