--- a/templates/macros/damage-targets.hbs
+++ b/templates/macros/damage-targets.hbs
@@ -1,17 +1,5 @@
 <div class="{{cssClass}} base-form" autocomplete="off">
-   <header class="base-form__callout-box">
-      {{#if (and (gt targetArray.length 0) (eq gmCheck "gm"))}}
-        <div class="base-form__callout base-form__callout--information">
-          <i class="fas fa-info-circle"></i>
-          {{{localize "EVENTIDE_RP_SYSTEM.Forms.Callouts.Damage.TargetMode" count=targetArray.length}}}
-        </div>
-      {{else}}
-        <div class="base-form__callout base-form__callout--information">
-          <i class="fas fa-info-circle"></i>
-          {{{localize "EVENTIDE_RP_SYSTEM.Forms.Callouts.Damage.SelectMode" count=selectedArray.length}}}
-        </div>
-      {{/if}}
-    </header>
+   {{> callout-box}}
   <div class="base-form__content">
     <div class="base-form__description">{{{localize "EVENTIDE_RP_SYSTEM.Forms.ScriptExplanations.DamageTargets"}}}</div>
    
