--- a/templates/macros/effect-creator.hbs
+++ b/templates/macros/effect-creator.hbs
@@ -1,25 +1,5 @@
 <div class="{{cssClass}} base-form effect-creator" autocomplete="off">
-  <header class="base-form__callout-box">
-    {{#if (eq playerMode true)}}
-      <div class="base-form__callout base-form__callout--information">
-        <i class="fas fa-info-circle"></i>
-        {{{localize "EVENTIDE_RP_SYSTEM.Forms.Callouts.Effect.PlayerMode" count=selectedArray.length}}}
-      </div>
-    {{/if}}
-    {{#if (eq playerMode false)}}
-      {{#if (eq targetArray.length 0)}}
-        <div class="base-form__callout base-form__callout--information">
-          <i class="fas fa-info-circle"></i>
-          {{{localize "EVENTIDE_RP_SYSTEM.Forms.Callouts.Effect.NoTargets"}}}
-        </div>
-      {{else}}
-        <div class="base-form__callout base-form__callout--information">
-          <i class="fas fa-info-circle"></i>
-          {{{localize "EVENTIDE_RP_SYSTEM.Forms.Callouts.Effect.WithTargets" count=targetArray.length}}}
-        </div>
-      {{/if}}
-    {{/if}}
-  </header>
+  {{> callout-box}}
   <div class="base-form__content">
     <div class="base-form__group">
       <label class="base-form__label" for="type">
