--- a/templates/macros/popups/gear-popup.hbs
+++ b/templates/macros/popups/gear-popup.hbs
@@ -1,15 +1,5 @@
 <div class="{{cssClass}} popup-form" autocomplete="off">
-    <header class="base-form__callout-box">
-        {{#if problems.targeting}}
-            <div class="base-form__callout base-form__callout--warning"><i class="fas fa-exclamation-triangle"></i> {{localize "EVENTIDE_RP_SYSTEM.Forms.Callouts.Gear.TargetGear"}}</div>
-        {{/if}}
-        {{#if problems.quantity}}
-            <div class="base-form__callout base-form__callout--warning"><i class="fas fa-exclamation-triangle"></i> {{localize "EVENTIDE_RP_SYSTEM.Forms.Callouts.Gear.InsufficientQuantity" cost=item.system.cost quantity=item.system.quantity}}</div>
-        {{/if}}
-        {{#if problems.equipped}}
-            <div class="base-form__callout base-form__callout--warning"><i class="fas fa-exclamation-triangle"></i> {{localize "EVENTIDE_RP_SYSTEM.Forms.Callouts.Gear.NotEquipped"}}</div>
-        {{/if}}
-    </header>
+    {{> callout-box}}
     <div class="popup-form__main">
         <div class="popup-form__header">{{item.name}}</div>
         <div class="popup-form__content popup-form__content--image">
@@ -105,7 +95,6 @@
 </div>
 {{/if}}
     </div>
-        
 
     {{> macro-footer}}
 </div>
