Added styling for tabs in system context.

--- a/css/eventide-rp-system.css
+++ b/css/eventide-rp-system.css
@@ -64,6 +64,7 @@
   --erps-secondary-image-background: rgba(0, 0, 0, 0.85);
   --erps-scrollbar-color: #0044aa;
   --erps-scrollbar-bg: #45454530;
+  --erps-tab-active-bg: rgba(0, 68, 170, 0.8);
   --erps-abilities-acro: rgb(191, 68, 0);
   --erps-abilities-phys: rgb(168, 3, 3);
   --erps-abilities-fort: rgb(45, 104, 45);
@@ -1463,6 +1464,60 @@
   background-color: var(--erps-scrollbar-bg);
   border-radius: 10rem;
   margin: 0;
+}
+*.sheet-tabs, * .tabs {
+  display: flex;
+  flex-wrap: wrap;
+  margin-bottom: 5px;
+  border-bottom: 1px solid var(--erps-c-faint);
+}
+* .sheet-tabs.tabs a[data-action=tab] {
+  position: relative;
+  margin: 0 5px;
+  padding: 5px 10px;
+  border: 1px solid transparent;
+  border-bottom: none;
+  border-radius: 5px 5px 0 0;
+  font-weight: 500;
+  transition: all 0.2s ease;
+}
+* .sheet-tabs.tabs a[data-action=tab].active {
+  position: relative;
+  background-color: transparent;
+  color: #ffffff;
+  border: none;
+  z-index: 1;
+  padding: 5px 15px;
+}
+* .sheet-tabs.tabs a[data-action=tab].active::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: var(--erps-tab-active-bg);
+  transform: skewX(-15deg);
+  transform-origin: bottom;
+  z-index: -1;
+}
+* .sheet-tabs.tabs a[data-action=tab]:hover:not(.active) {
+  position: relative;
+  color: var(--erps-scrollbar-color);
+  border: none;
+  background-color: transparent;
+}
+* .sheet-tabs.tabs a[data-action=tab]:hover:not(.active)::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(var(--erps-scrollbar-color), 0.1);
+  transform: skewX(-15deg);
+  transform-origin: bottom;
+  z-index: -1;
 }
 
 /* Styles limited to eventide-rp-system sheets */
@@ -2892,6 +2947,7 @@
   --erps-secondary-image-background: rgba(0, 0, 0, 0.85);
   --erps-scrollbar-color: #0044aa;
   --erps-scrollbar-bg: #45454530;
+  --erps-tab-active-bg: rgba(0, 68, 170, 0.8);
   --erps-abilities-acro: rgb(191, 68, 0);
   --erps-abilities-phys: rgb(168, 3, 3);
   --erps-abilities-fort: rgb(45, 104, 45);
@@ -3102,6 +3158,7 @@
   --erps-secondary-image-background: rgba(0, 0, 0, 0.85);
   --erps-scrollbar-color: #0044aa;
   --erps-scrollbar-bg: #45454530;
+  --erps-tab-active-bg: rgba(0, 68, 170, 0.8);
   --erps-abilities-acro: rgb(191, 68, 0);
   --erps-abilities-phys: rgb(168, 3, 3);
   --erps-abilities-fort: rgb(45, 104, 45);
@@ -3300,6 +3357,7 @@
   --erps-secondary-image-background: rgba(0, 0, 0, 0.85);
   --erps-scrollbar-color: #0044aa;
   --erps-scrollbar-bg: #45454530;
+  --erps-tab-active-bg: rgba(0, 68, 170, 0.8);
   --erps-abilities-acro: rgb(191, 68, 0);
   --erps-abilities-phys: rgb(168, 3, 3);
   --erps-abilities-fort: rgb(45, 104, 45);
@@ -3698,6 +3756,7 @@
   --erps-secondary-image-background: rgba(0, 0, 0, 0.85);
   --erps-scrollbar-color: #0044aa;
   --erps-scrollbar-bg: #45454530;
+  --erps-tab-active-bg: rgba(0, 68, 170, 0.8);
   --erps-abilities-acro: rgb(191, 68, 0);
   --erps-abilities-phys: rgb(168, 3, 3);
   --erps-abilities-fort: rgb(45, 104, 45);
