--- a/src/scss/components/_items.scss
+++ b/src/scss/components/_items.scss
@@ -73,7 +73,7 @@
 .items-panel__header-cell {
   background: colors.$form-content-bg;
   width: 100%;
-  color: colors.$label-text;
+  color: colors.$label-light-required;
   font-weight: bold;
   border-bottom: 2px solid #10458e;
   padding-bottom: 2px;
