--- a/src/scss/components/_resource.scss
+++ b/src/scss/components/_resource.scss
@@ -11,7 +11,7 @@
     display: grid;
     grid-template-columns: minmax(min-content, max-content) 1fr;
     align-items: center;
-    border: 0.125rem outset #c9c7b8;
+    border: 0.125rem outset colors.$c-dark;
     border-radius: 0.5rem;
     background-color: colors.$form-content-bg;
     padding: 0.2rem;
