Corrected a couple of class selectors for character-effects.

--- a/templates/item/character-effects.hbs
+++ b/templates/item/character-effects.hbs
@@ -149,6 +149,7 @@
             <div class="eventide-item-sheet__effects-grid-row eventide-item-sheet__effects-grid-row--hidden">
               <div class="eventide-item-sheet__effects-grid-cell">
                 <select 
+                  class="base-form__select"
                   name="characterEffects.hiddenEffects.{{@index}}.ability"
                   data-index="{{@index}}"
                   data-type="hiddenEffects"
@@ -163,6 +164,7 @@
               
               <div class="eventide-item-sheet__effects-grid-cell">
                 <select 
+                  class="base-form__select"
                   name="characterEffects.hiddenEffects.{{@index}}.mode"
                   data-index="{{@index}}"
                   data-type="hiddenEffects"
