--- a/templates/item/header.hbs
+++ b/templates/item/header.hbs
@@ -86,6 +86,7 @@
           />
         </div>
       {{/if}}
+      {{#if (not item.type 'transformation')}}
         <div>
           <label class="base-form__label--small" for="color-textColor">
             {{localize 'EVENTIDE_RP_SYSTEM.Item.Colors.TextColor.label'}}
@@ -110,6 +111,7 @@
             </div>
           </div>
         </div>
+      {{/if}}
     </div>
     <div class="grid grid-3col">
       <div class="checkbox-resource">
